clusters/ska132/applications/src-net/xrootd/xrootd-client.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xrootd-client
  namespace: xrootd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: xrootd-client
  template:
    metadata:
      labels:
        app: xrootd-client
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: xrootd
          image: container-image-mirror.internal.ska.zverse.space:32443/docker.io/rucio/xrootd:36.2.0
          command: ["sleep","inf"]
          securityContext:
            runAsUser: 0
            runAsGroup: 1000
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: grid-certs
              mountPath: /etc/grid-security/certificates/
              readOnly: true
            - name: tls-secrets
              mountPath: /etc/grid-security/tls-secrets/
      volumes:
        - name: grid-certs
          emptyDir: {}
        - name: tls-secrets
          secret:
            secretName: xrootd.ska.zverse.space-tls
