clusters/ska132/applications/src-net/xrootd/xrootd-server.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xrootd-server
  namespace: xrootd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: xrootd-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: xrootd-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: xrootd
          image: container-image-mirror.internal.ska.zverse.space:32443/docker.io/rucio/xrootd:36.2.0
          command: ["/usr/bin/xrootd"]
          args: ["-c", "/etc/xrootd/xrootd-http.cfg", "-k", "fifo", "-s", "/run/xrootd/xrootd-http.pid", "-n", "http"]
          ports:
            - containerPort: 8080   # HTTPS (XrdHTTP) port
            - containerPort: 1094 # xrootd port
          securityContext:
            runAsUser: 1000        # Run as non-root user
            runAsGroup: 1000       # Run as non-root group
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: xrootd-http-config
              mountPath: /etc/xrootd/
            - name: xrootd-checksum-config
              mountPath: /etc/xrootd-checksum/
            - name: grid-certs
              mountPath: /etc/grid-security/certificates/
              readOnly: true
            - name: xrootd-data
              mountPath: /data
            - name: spool-dir
              mountPath: /var/spool/xrootd
            - name: run-dir
              mountPath: /run/xrootd
            - name: tls-certs
              mountPath: /etc/grid-security/xrd/
              readOnly: true
      volumes:
        - name: xrootd-http-config
          configMap:
            name: xrootd-http-config
        - name: xrootd-checksum-config
          configMap:
            name: xrootd-checksum-config
            defaultMode: 511
        - name: grid-certs
          emptyDir: {}
        - name: xrootd-data
          nfs:
            server: 192.168.6.66
            path: /share/cnSRC/application/xrootd
            readOnly: false
        - name: spool-dir
          emptyDir: {}
        - name: run-dir
          emptyDir: {}
        - name: tls-certs
          emptyDir: {}
        - name: tls-secrets
          secret:
            secretName: xrootd.ska.zverse.space-tls
